Consistent EOB usage
* Improve EOB handling for bulk ops

* Improve EOB handling for bulk ops
