# cache-spi-impl/map-cache/map-cache-core/src/main/java/com/bhf/aeroncache/codecs/response/ReusableStringCacheResponseDecoder.java
@@ -341,6 +341,7 @@ public class ReusableStringCacheResponseDecoder implements CacheResponseDecoder<
     public void decodeBulkCacheOpsResult(DirectBuffer buffer, int offset, BulkCacheOpsResult<ReusableString, ReusableString, ReusableString> bulkCacheOpsResult) {
         bulkCacheOpsResult.clear();
         bulkOperationResponseDecoder.wrapAndApplyHeader(buffer, offset, headerDecoder);
+        bulkCacheOpsResult.setEndOfBatch(bulkOperationResponseDecoder.endOfBatch() == BooleanType.T);
         var itemsDecoder = bulkOperationResponseDecoder.items();
 
         for(var op: itemsDecoder) {
